update ws
