# routes/amplifiers.js
@@ -1,35 +1,35 @@
 const express = require('express');
 const router = express.Router();
 const amplifiersCtrl = require('../controllers/amplifiersCtrl');
-
+const passport = require("passport")
 router.get(
-    // #swagger.tags = ["amplifier"]
+    // #swagger.summary = 'Get all amplifierss'
+    // #swagger.description = 'Get all amplifiers'
+    // #swagger.parameters['page'] = { description: 'Page number (default 0)', type: 'number' }
+    // #swagger.parameters['limit'] = { description: 'Elements per page (default 2)', type: 'number'
+    // #swagger.parameters['brand'] = { description: 'brand id', type: 'string
     "/",
     amplifiersCtrl.getAllAmplifiers
 );
 
 router.post(
-    // #swagger.tags = ["amplifier"]
     "/",
     passport.authenticate('jwt', { session: false }),
     amplifiersCtrl.postCreateAmplifier,
 )
 
 router.delete(
-    // #swagger.tags = ["amplifier"]
     "/:id",
     passport.authenticate('jwt', { session: false }),
     amplifiersCtrl.deleteAmplifier,
 )
 
 router.get(
-    // #swagger.tags = ["amplifier"]
     "/:id",
     amplifiersCtrl.getOneAmplifier,
 )
 
 router.patch(
-    // #swagger.tags = ["amplifier"]
     "/:id",
     passport.authenticate('jwt', { session: false }),
     amplifiersCtrl.patchUpdateAmplifier,
